--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -16,7 +16,7 @@
 <% end %>
 
 <%= form_tag authors_path, method: "post" do %>
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "name", "Name" %>
     <%= text_field_tag "name" %>
   </div>
