--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -21,12 +21,12 @@
     <%= text_field_tag "name" %>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "email", "Email" %>
     <%= text_field_tag "email" %>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
     <%= label_tag "phone_number", "Phone Number" %>
     <%= text_field_tag "phone_number" %>
   </div>
